--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <h2>I am a web developer</h2>
 
         <hr/>
-        <h3><a href="./public/movie-ranking.html">movie ranking project</a></h3>
-        <img src="./assets/images/movie-ranking.png" height="200">
-        <h3><a href="./3.4 Birthday Invite Project/index.html">birthday invite project</a></h3>
+        <h3><a href="./public/movie ranking.html">movie ranking project</a></h3>
+        <img src="./assets/movie ranking.png" height="200"/>
+        <h3><a href="./public/birthday invite.html">birthday invite project</a></h3>
         <img src="./assets/Birthday Invite.png.png" height="200"/>
         <hr/>
         <a href="./public/about.html">About me</a>
